interpolated for NaN values

--- a/Exploratory Analysis/Research.ipynb
+++ b/Exploratory Analysis/Research.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -243,46 +243,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The datasets are set to variables to reduce clutter."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sentdex_sentiment_signal = sentiment_free.sentiment_signal\n",
-    "stocktwits.bearish_intensity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dealing with NaN Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "adjusted_sentiment_signal = df.where(df.replace(to_replace=0, value=np.nan),\n",
-    " other=(df.fillna(method='ffill') + df.fillna(method='bfill'))/2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Sentiment Signal Moving Averages\n",
     "\n",
     "Simple Moving Averages"
@@ -290,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -328,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -379,14 +339,25 @@
     "pipe.add(sma_50, 'sma_50')\n",
     "pipe.add(sma_80, 'sma_80')\n",
     "\n",
+    "pipe.set_screen(tradeable_stocks)\n",
+    "\n",
     "start_timer = time()\n",
     "results = run_pipeline(pipe, '2015-01-01', '2016-01-01')\n",
-    "end_timer = time()\n"
+    "end_timer = time()\n",
+    "\n",
+    "print(\"Time to run pipeline %.2f secs\" % (end_timer - start_timer))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dealing with NaN Values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -418,21 +389,21 @@
        "      <td>1.20</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>3.6</td>\n",
+       "      <td>3.60</td>\n",
        "      <td>4.266667</td>\n",
-       "      <td>4.26</td>\n",
-       "      <td>2.7375</td>\n",
+       "      <td>4.260</td>\n",
+       "      <td>2.73750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Equity(21 [AAME])</th>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>2.533333</td>\n",
+       "      <td>2.530</td>\n",
+       "      <td>1.80625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Equity(24 [AAPL])</th>\n",
@@ -440,81 +411,75 @@
        "      <td>1.46</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>0.2</td>\n",
+       "      <td>0.20</td>\n",
        "      <td>0.800000</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.8750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Equity(25 [ARNC_PR])</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>0.87500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Equity(31 [ABAX])</th>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>0.646667</td>\n",
+       "      <td>0.832</td>\n",
+       "      <td>1.05500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(41 [ARCB])</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-0.26</td>\n",
+       "      <td>0.493333</td>\n",
+       "      <td>0.864</td>\n",
+       "      <td>1.23500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                bearish_intensity  \\\n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                   0.00   \n",
-       "                          Equity(21 [AAME])                  0.00   \n",
-       "                          Equity(24 [AAPL])                  1.82   \n",
-       "                          Equity(25 [ARNC_PR])                NaN   \n",
-       "                          Equity(31 [ABAX])                  0.00   \n",
+       "                                             bearish_intensity  \\\n",
+       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                0.00   \n",
+       "                          Equity(21 [AAME])               0.00   \n",
+       "                          Equity(24 [AAPL])               1.82   \n",
+       "                          Equity(31 [ABAX])               0.00   \n",
+       "                          Equity(41 [ARCB])               0.00   \n",
        "\n",
-       "                                                bullish_intensity  \\\n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                   1.20   \n",
-       "                          Equity(21 [AAME])                  0.00   \n",
-       "                          Equity(24 [AAPL])                  1.46   \n",
-       "                          Equity(25 [ARNC_PR])                NaN   \n",
-       "                          Equity(31 [ABAX])                  0.00   \n",
+       "                                             bullish_intensity  \\\n",
+       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                1.20   \n",
+       "                          Equity(21 [AAME])               0.00   \n",
+       "                          Equity(24 [AAPL])               1.46   \n",
+       "                          Equity(31 [ABAX])               0.00   \n",
+       "                          Equity(41 [ARCB])               0.00   \n",
        "\n",
-       "                                                sentiment_signal  sma_10  \\\n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                   2.0     2.8   \n",
-       "                          Equity(21 [AAME])                  NaN     NaN   \n",
-       "                          Equity(24 [AAPL])                  2.0     1.8   \n",
-       "                          Equity(25 [ARNC_PR])               NaN     NaN   \n",
-       "                          Equity(31 [ABAX])                  NaN     NaN   \n",
+       "                                             sentiment_signal  sma_10  sma_20  \\\n",
+       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                2.0     2.8    3.60   \n",
+       "                          Equity(21 [AAME])               2.0     2.3    1.90   \n",
+       "                          Equity(24 [AAPL])               2.0     1.8    0.20   \n",
+       "                          Equity(31 [ABAX])               1.8     1.0   -0.03   \n",
+       "                          Equity(41 [ARCB])               1.6     0.2   -0.26   \n",
        "\n",
-       "                                                sma_20    sma_30  sma_50  \\\n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])         3.6  4.266667    4.26   \n",
-       "                          Equity(21 [AAME])        NaN       NaN     NaN   \n",
-       "                          Equity(24 [AAPL])        0.2  0.800000    0.80   \n",
-       "                          Equity(25 [ARNC_PR])     NaN       NaN     NaN   \n",
-       "                          Equity(31 [ABAX])        NaN       NaN     NaN   \n",
-       "\n",
-       "                                                sma_80  \n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])      2.7375  \n",
-       "                          Equity(21 [AAME])        NaN  \n",
-       "                          Equity(24 [AAPL])     0.8750  \n",
-       "                          Equity(25 [ARNC_PR])     NaN  \n",
-       "                          Equity(31 [ABAX])        NaN  "
+       "                                               sma_30  sma_50   sma_80  \n",
+       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])   4.266667   4.260  2.73750  \n",
+       "                          Equity(21 [AAME])  2.533333   2.530  1.80625  \n",
+       "                          Equity(24 [AAPL])  0.800000   0.800  0.87500  \n",
+       "                          Equity(31 [ABAX])  0.646667   0.832  1.05500  \n",
+       "                          Equity(41 [ARCB])  0.493333   0.864  1.23500  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.head()"
+    "adjusted_dataset = results.interpolate()\n",
+    "adjusted_dataset.head()"
    ]
   },
   {
