--- a/Exploratory Analysis/Research.ipynb
+++ b/Exploratory Analysis/Research.ipynb
@@ -483,6 +483,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "\n",
+    "* make adjusted_dataset contain only unique equities\n",
+    "* Alphalens tearsheet for:\n",
+    "    * bearish_intensity\n",
+    "    * bullish_intensity\n",
+    "    * sentiment_signal\n",
+    "    * sentiment moving averages\n",
+    "* choose factors\n",
+    "* choose how to distribute long and short\n",
+    "* backtest\n",
+    "* analyze portfolio\n",
+    "* repeat backtests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
