starting to drop duplicate values

--- a/Exploratory Analysis/Research.ipynb
+++ b/Exploratory Analysis/Research.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 185,
    "metadata": {
     "collapsed": false
    },
@@ -52,6 +52,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from quantopian.pipeline.filters import Q1500US\n",
     "from quantopian.research import run_pipeline\n",
     "from quantopian.pipeline import Pipeline\n",
     "from quantopian.pipeline.data.psychsignal import stocktwits\n",
@@ -71,66 +72,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Universe Filters\n",
-    "\n",
-    "For our strategy, we want our base universe to be filtered by the following criteria:\n",
-    "\n",
-    "* is a primary share\n",
-    "* is listed as a common stock\n",
-    "* is not a depositary receipt (ADR/GDR)\n",
-    "* is not trading over-the-counter (OTC)\n",
-    "* is not when-issued (WI)\n",
-    "* is not a limited partnership (LP)\n",
-    "* is not an ETF (has Morningstar fundamental data)\n",
-    "* has a price greater than or equal to $2.00\n",
-    "* is found in the PsychSignal dataset"
+    "### Universe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 186,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#is a primary share\n",
-    "primary_share = IsPrimaryShare()\n",
-    "\n",
-    "#is a common stock\n",
-    "common_stock = Fundamentals.security_type.latest.eq('ST00000001')\n",
-    "\n",
-    "#not a depositary receipt\n",
-    "not_depositary = ~Fundamentals.is_depositary_receipt.latest\n",
-    "\n",
-    "#not trading over-the-counter\n",
-    "not_otc = ~Fundamentals.exchange_id.latest.startswith('OTC')\n",
-    "\n",
-    "#not when-issued\n",
-    "not_wi = ~Fundamentals.symbol.latest.endswith('.WI')\n",
-    "\n",
-    "#not a limited partnership\n",
-    "not_lp_name = ~Fundamentals.standard_name.latest.matches('.* L[. ]?P.?$')\n",
-    "not_lp_balance_sheet = Fundamentals.limited_partnership.latest.isnull()\n",
-    "\n",
-    "#not an ETF\n",
-    "have_market_cap = Fundamentals.market_cap.latest.notnull()\n",
-    "\n",
-    "#equity price greater than or equal to $2.00\n",
-    "price_filter = USEquityPricing.close >= 2.00\n",
-    "\n",
-    "#Filter\n",
-    "tradeable_stocks = (\n",
-    "    primary_share\n",
-    "    & common_stock\n",
-    "    & not_depositary\n",
-    "    & not_otc\n",
-    "    & not_wi\n",
-    "    & not_lp_name\n",
-    "    & not_lp_balance_sheet\n",
-    "    & have_market_cap\n",
-    "    & price_filter\n",
-    ")"
+    "universe = Q1500US()"
    ]
   },
   {
@@ -158,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 187,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -207,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -250,34 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sma_10 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=10)\n",
-    "sma_20 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=20)\n",
-    "sma_30 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=30)\n",
-    "sma_50 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=50)\n",
-    "sma_80 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=80)"
+    "sma_10 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=10, mask=universe)\n",
+    "sma_20 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=20, mask=universe)\n",
+    "sma_30 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=30, mask=universe)\n",
+    "sma_50 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=50, mask=universe)\n",
+    "sma_80 = SimpleMovingAverage(inputs=[sentiment_free.sentiment_signal], window_length=80, mask=universe)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exponential Weighted Moving Averages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -288,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 190,
    "metadata": {
     "collapsed": true
    },
@@ -321,12 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to run pipeline 27.22 secs\n"
+     ]
+    }
+   ],
    "source": [
     "pipe = Pipeline()\n",
     "\n",
@@ -339,7 +284,7 @@
     "pipe.add(sma_50, 'sma_50')\n",
     "pipe.add(sma_80, 'sma_80')\n",
     "\n",
-    "pipe.set_screen(tradeable_stocks)\n",
+    "pipe.set_screen(universe)\n",
     "\n",
     "start_timer = time()\n",
     "results = run_pipeline(pipe, '2015-01-01', '2016-01-01')\n",
@@ -357,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -389,21 +334,10 @@
        "      <td>1.20</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>3.60</td>\n",
+       "      <td>3.600</td>\n",
        "      <td>4.266667</td>\n",
-       "      <td>4.260</td>\n",
-       "      <td>2.73750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Equity(21 [AAME])</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>2.533333</td>\n",
-       "      <td>2.530</td>\n",
-       "      <td>1.80625</td>\n",
+       "      <td>4.26</td>\n",
+       "      <td>2.7375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Equity(24 [AAPL])</th>\n",
@@ -411,32 +345,43 @@
        "      <td>1.46</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>0.20</td>\n",
+       "      <td>0.200</td>\n",
        "      <td>0.800000</td>\n",
-       "      <td>0.800</td>\n",
-       "      <td>0.87500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Equity(31 [ABAX])</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.03</td>\n",
-       "      <td>0.646667</td>\n",
-       "      <td>0.832</td>\n",
-       "      <td>1.05500</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.8750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Equity(41 [ARCB])</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>-0.375</td>\n",
+       "      <td>0.416667</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>1.3250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(62 [ABT])</th>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>-0.26</td>\n",
-       "      <td>0.493333</td>\n",
-       "      <td>0.864</td>\n",
-       "      <td>1.23500</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-2.2</td>\n",
+       "      <td>-0.950</td>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.7750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Equity(67 [ADSK])</th>\n",
+       "      <td>1.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>5.933333</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>4.2500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -445,41 +390,49 @@
       "text/plain": [
        "                                             bearish_intensity  \\\n",
        "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                0.00   \n",
-       "                          Equity(21 [AAME])               0.00   \n",
        "                          Equity(24 [AAPL])               1.82   \n",
-       "                          Equity(31 [ABAX])               0.00   \n",
-       "                          Equity(41 [ARCB])               0.00   \n",
+       "                          Equity(41 [ARCB])               0.91   \n",
+       "                          Equity(62 [ABT])                0.00   \n",
+       "                          Equity(67 [ADSK])               1.70   \n",
        "\n",
        "                                             bullish_intensity  \\\n",
        "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                1.20   \n",
-       "                          Equity(21 [AAME])               0.00   \n",
        "                          Equity(24 [AAPL])               1.46   \n",
-       "                          Equity(31 [ABAX])               0.00   \n",
-       "                          Equity(41 [ARCB])               0.00   \n",
+       "                          Equity(41 [ARCB])               0.73   \n",
+       "                          Equity(62 [ABT])                0.00   \n",
+       "                          Equity(67 [ADSK])               0.00   \n",
        "\n",
        "                                             sentiment_signal  sma_10  sma_20  \\\n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                2.0     2.8    3.60   \n",
-       "                          Equity(21 [AAME])               2.0     2.3    1.90   \n",
-       "                          Equity(24 [AAPL])               2.0     1.8    0.20   \n",
-       "                          Equity(31 [ABAX])               1.8     1.0   -0.03   \n",
-       "                          Equity(41 [ARCB])               1.6     0.2   -0.26   \n",
+       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])                2.0     2.8   3.600   \n",
+       "                          Equity(24 [AAPL])               2.0     1.8   0.200   \n",
+       "                          Equity(41 [ARCB])               1.5    -0.2  -0.375   \n",
+       "                          Equity(62 [ABT])                1.0    -2.2  -0.950   \n",
+       "                          Equity(67 [ADSK])               6.0     6.0   6.000   \n",
        "\n",
-       "                                               sma_30  sma_50   sma_80  \n",
-       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])   4.266667   4.260  2.73750  \n",
-       "                          Equity(21 [AAME])  2.533333   2.530  1.80625  \n",
-       "                          Equity(24 [AAPL])  0.800000   0.800  0.87500  \n",
-       "                          Equity(31 [ABAX])  0.646667   0.832  1.05500  \n",
-       "                          Equity(41 [ARCB])  0.493333   0.864  1.23500  "
+       "                                               sma_30  sma_50  sma_80  \n",
+       "2015-01-02 00:00:00+00:00 Equity(2 [ARNC])   4.266667    4.26  2.7375  \n",
+       "                          Equity(24 [AAPL])  0.800000    0.80  0.8750  \n",
+       "                          Equity(41 [ARCB])  0.416667    0.88  1.3250  \n",
+       "                          Equity(62 [ABT])   0.033333    0.96  1.7750  \n",
+       "                          Equity(67 [ADSK])  5.933333    4.56  4.2500  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "adjusted_dataset = results.interpolate()\n",
-    "adjusted_dataset.head()"
+    "adjusted_dataset.head()\n",
+    "#len(adjusted_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering for Unique Equities"
    ]
   },
   {
@@ -488,7 +441,7 @@
    "source": [
     "# TODO\n",
     "\n",
-    "* make adjusted_dataset contain only unique equities\n",
+    "* first name the equity column, the drop duplicates based on it\n",
     "* Alphalens tearsheet for:\n",
     "    * bearish_intensity\n",
     "    * bullish_intensity\n",
